# v1.1.0alpha1

- Fixed bug: ie6 issue with Y.io.ez
- Updated YUI 3.0.0 to GA
- Fixed bug #15606: Admin Content Tree images not found
- Fixed bug #15699: eZJSCore: possible function mixup for ezscriptfiles template operator
- BC: Removed charset attribute from all html tags but script with src attribute (html validation)
- Deprecated charset parameter on ezcss, ezcss_load and ezcss_requried template operators!
- Only use POST parameters for ezjscore/call parameters to avoid reaching url limit and 
  logging parameters in wwwserver logs
- Add missing include_once('kernel/common/i18n.php'); in index_ajax.php
- Make sure admin user has access to /call even if PolicyOmitList/AnonymousAccessList is commented
- Add html comments around inline css and javascript
- Add support for c.arguments on Y.io.ez() like Y.io() has
- Added support for setting ContentType with get parameter on ezjscore/call for development use
- Added ezjsc::search for re use by other extensions (same parameters as the one in ezflow and ezoe)
- Fixed ezjscore/run issue with eZ Publish 4.0.0 / 4.0.1 on eZURI::instance()
- Disabled language attribute by default on ezscript() for xhtml strict / xhtml1.1 / html5 validation
- BC: Fixed setting typo LocaleScript -> LocalScript in ezjscore.ini


# v1.0.0  29 Sept 2009

- Added FAQ and CHANGELOG
- Moved [eZJSCore]Packer=disabled from site.ini to ezjscore.ini to comply with eZ Network certification



# v1.0.0rc2  19 Sept 2009

- Added link to project website in ezinfo page
- Don't store $moduleResult['content_info']['persistent_variable'] unless it's already defined (to avoid confusing code that checks for presence of $moduleResult['content_info'])
- Flatten persistent_variable array to make sure array_unique can actually remove all duplicates
- Fixed bug: Access to a kernel module via index_ajax.php
- Added note in ezinfo about jQuery
- Fixed url to jQuery to use google cdn and not googlecode


# v1.0.0rc1  17 Sept 2009

- Initial version